k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medicare
  labels:
    app.kubernetes.io/part-of: medicare
